[FE]feat: Add frontend project

--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ES6",
     "lib": [
+      "ES6",
       "dom",
       "dom.iterable",
+      "ScriptHost",
       "esnext"
     ],
     "allowJs": true,
@@ -20,13 +22,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "sourceMap": true,
-    "outDir": "dist",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true
+    "outDir": "./dist",
+    "baseUrl": "src",
   },
   "include": [
-    "src"
-  ]
+    "src/**/*.ts"
+  ],
 }
