--- a/mpoffice/build.gradle
+++ b/mpoffice/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
-
+	implementation 'com.google.auth:google-auth-library-oauth2-http:0.22.0'
+	implementation 'com.google.cloud:google-cloud-storage:2.0.0'
 }
 
 tasks.named('test') {
