--- a/mpoffice/src/main/resources/application.yml
+++ b/mpoffice/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://j8a305.p.ssafy.io:3371/mpoffice-project
+        url: jdbc:mysql://j8a305.p.ssafy.io:3371/mpoffice-project?serverTimezone=Asia/Seoul
         username: a305
         password: dkanakf156346!!
     jpa:
@@ -10,7 +10,7 @@ spring:
             ddl-auto: none
         properties:
             hibernate:
-                show_sql: false
+                show_sql: true
                 format_sql: true
 
 #                url: jdbc:mysql://j8a305.p.ssafy.io:3371/mpoffice-project?serverTimezone=Asia/Seoul
