[FE]feat: Add frontend setting

--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -23,7 +23,7 @@
     "jsx": "react-jsx",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "src",
+    "baseUrl": "./src/",
   },
   "include": [
     "src"
