--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "gsap": "^3.11.4",
     "primereact": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
