--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "gsap": "^3.11.4",
+    "primeicons": "^6.0.1",
     "primereact": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
