[BE]feat: merge with local user api

--- a/mpoffice/src/main/resources/application.yml
+++ b/mpoffice/src/main/resources/application.yml
@@ -1,23 +1,24 @@
 spring:
-    config:
-      activate:
-          on-profile: prod
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://j8a305.p.ssafy.io:3371/${MYSQL_DATABASE}
-        username: ${MYSQL_USER}
-        password: ${MYSQL_PASSWORD}
+        url: jdbc:mysql://j8a305.p.ssafy.io:3371/mpoffice-project?serverTimezone=Asia/Seoul
+        username: a305
+        password: dkanakf156346!!
     jpa:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         hibernate:
-            ddl-auto: none
+            ddl-auto: create
         properties:
             hibernate:
                 show_sql: false
                 format_sql: true
+    servlet:
+        multipart:
+            max-file-size: 10MB
+            max-request-size: 10MB
 
 server:
-    port: 8007
+    port: 8080
     servlet:
         encoding:
             charset: UTF-8
