--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
     "gsap": "^3.11.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.0",
