[BE]feat : change dockerfile

--- a/auction/Dockerfile
+++ b/auction/Dockerfile
@@ -18,4 +18,4 @@ RUN ./gradlew clean bootJar
 FROM adoptopenjdk:11-hotspot
 COPY --from=builder build/libs/*.jar app.jar
 
-ENTRYPOINT ["java","-jar", "-datasource.username=${USERNAME}", "-datasource.password=${PASSWORD}", "-datasource.url=${HOST}", "/app.jar"]
+ENTRYPOINT ["java","-jar", "-Dspring.datasource.username=${USERNAME}", "-Dspring.datasource.password=${PASSWORD}", "-Dspring.datasource.url=${HOST}", "/app.jar"]
