--- a/mpoffice/Dockerfile
+++ b/mpoffice/Dockerfile
@@ -1,14 +1,21 @@
-FROM adoptopenjdk/openjdk11:jdk-11.0.10_9-alpine AS builder
-COPY gradlew .
-COPY gradle gradle
-COPY build.gradle .
-COPY settings.gradle .
-COPY src src
-RUN chmod +x ./gradlew
-RUN ./gradlew bootJar
+FROM adoptopenjdk:11-hotspot AS builder
+# env 
+ENV USERNAME username
+ENV PASSWORD pwd
+ENV HOST localhost
+ENV PORT 88888
+ENV DATABASE orange
 
-FROM adoptopenjdk/openjdk11:jre-11.0.10_9-alpine
+# env finish
+COPY auction/gradlew .
+COPY auction/gradle gradle
+COPY auction/build.gradle .
+COPY auction/settings.gradle .
+COPY auction/src src
+RUN chmod +x ./gradlew
+RUN ./gradlew clean bootJar
+
+FROM adoptopenjdk:11-hotspot
 COPY --from=builder build/libs/*.jar app.jar
 
-EXPOSE 8080
-ENTRYPOINT ["java","-Dspring.profiles.active=${SERVER_MODE}","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar", "-Dspring.datasource.username=${USERNAME}", "-Dspring.datasource.password=${PASSWORD}", "-Dspring.datasource.url=${HOST}", "/app.jar"]
