--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "react-transition-group": "^4.4.5",
     "three": "^0.150.1",
     "tsc-watch": "^6.0.0",
     "typescript": "^4.9.5",
