[CI/CD]fix: fix error/ change port to 3000

--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: react-front
     build:
       context: .
-      dockerfile: ./dockerfile
+      dockerfile: ./Dockerfile
     ports:
-      - 3070:3000
+      - 3000:3000
     restart: always
