--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.18.16-airplain as builder
+FROM node:latest as builder
 WORKDIR "/app"
 COPY package.json .
 RUN npm install --legacy-peer-deps
@@ -9,7 +9,7 @@ FROM nginx
 RUN mkdir /app
 WORKDIR /app
 RUN rm /etc/nginx/conf.d/default.conf
-COPY .nginx.conf /etc/nginx/conf.d
+COPY ./nginx.conf /etc/nginx/conf.d
 COPY --from=builder /app/build /app/build
-EXPOSE 3070
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
