--- a/auction/build.gradle
+++ b/auction/build.gradle
@@ -31,6 +31,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb
+	implementation 'org.springframework.data:spring-data-mongodb:4.0.4'
+	// https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
+	implementation 'org.mongodb:mongo-java-driver:3.12.12'
+
 }
 
 tasks.named('test') {
