--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.3.4",
     "gsap": "^3.11.4",
     "gsap-plugin": "^5.0.8",
     "primeicons": "^6.0.1",
