--- a/auction/src/main/resources/application.yml
+++ b/auction/src/main/resources/application.yml
@@ -1,32 +1,17 @@
-#spring:
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc://mysql://j8a305.p.ssafy.io:3072/${MYSQL_DB}
-#    username: ${MYSQL_USER}
-#    password: ${MYSQL_PASSWORD}
-#  data:
-#    mongodb:
-#      host: j8a305.p.ssafy.io
-#      port: 27017
-#      authentication-database: admin
-#      username: ${MONGO_INITDB_ROOT_USERNAME}
-#      password: ${MONGO_INITDB_ROOT_PASSWORD}
-#      database: ${MONGO_INITDB_DATABASE}
-
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://j8a305.p.ssafy.io:3072/auction
-    username: a305
-    password: dkanakf156346!!
+    url: jdbc:mysql://j8a305.p.ssafy.io:3072/${MYSQL_DB}
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
   data:
     mongodb:
       host: j8a305.p.ssafy.io
       port: 27017
       authentication-database: admin
-      username: a305
-      password: dkanakf156346!!
-      database: a305_mongodb
+      username: ${MONGO_INITDB_ROOT_USERNAME}
+      password: ${MONGO_INITDB_ROOT_PASSWORD}
+      database: ${MONGO_INITDB_DATABASE}
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
