--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,8 @@
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
     "react-transition-group": "^4.4.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "three": "^0.150.1",
     "tsc-watch": "^6.0.0",
     "typescript": "^4.9.5",
@@ -55,6 +58,8 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "@types/three": "^0.149.0"
   }
 }
