[BE]fix: fix port configuration

--- a/mpoffice/Dockerfile
+++ b/mpoffice/Dockerfile
@@ -7,6 +7,8 @@ ENV PORT 88888
 ENV DATABASE orange
 
 # env finish
+
+EXPOSE port 8071
 COPY mpoffice/gradlew .
 COPY mpoffice/gradle gradle
 COPY mpoffice/build.gradle .
