--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,7 +24,9 @@
     "three": "^0.150.1",
     "tsc-watch": "^6.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.9.0",
+    "web3-utils": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
