--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -1,13 +1,18 @@
-version: "3.7"
+version: "3"
 
 services:
-  react-front:
+  front:
+    image: react-front
     container_name: react-front
     build:
       context: .
       dockerfile: ./Dockerfile
     ports:
       - 3000:3000
-    restart: always
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
+    networks:
+      - a305-net
+
+networks:
+    a305-net:
+        external:
+            name: a305-net
