--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 
 services:
-  front:
-    image: react-front
+  frontend:
+    image: react-front:latest
     container_name: react-front
     build:
       context: .
