[CI/CD]fix: add network

--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -10,3 +10,10 @@ services:
     ports:
       - 3000:3000
     restart: always
+    networks:
+      - a305-net
+
+networks:
+    a305-net:
+        external:
+            name: a305-net
