--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,15 +1,13 @@
-FROM node:latest as builder
-WORKDIR "/app"
-COPY package.json .
-RUN npm install --legacy-peer-deps
-COPY . .
-RUN npm run build
-
-FROM nginx
-RUN mkdir /app
+FROM node:14.15.4 as build-stage
 WORKDIR /app
-RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx.conf /etc/nginx/conf.d
-COPY --from=builder /app/build /app/build
+COPY package*.json ./
+RUN npm install
+COPY ./ .
+RUN npm run build
+FROM nginx as production-stage
+RUN mkdir /app
+COPY --from=build-stage /app/build /app
+COPY nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx ", "-g", "daemon off"]
