--- a/mpoffice/build.gradle
+++ b/mpoffice/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.springframework.security:spring-security-test'
 
 	/*swagger 2*/
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
