--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_CM_ENDPOINT = "https://dahejocontentmoderator.cognitiveservices.azure.com"
 REACT_APP_CM_KEY = "2ee82f90eb6f43888bb0c566bccc26c9"
+
+REACT_APP_HOST = "https://j8a305.p.ssafy.io"
