[BE]feat: 경매 등록 개발, 경매 목록 response dto(진행중 경매, 시작 대기중인 경매, 끝난 경매) 추가

--- a/auction/build.gradle
+++ b/auction/build.gradle
@@ -40,6 +40,13 @@ dependencies {
 	/*websocket*/
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+	/*okhttp3*/
+	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
+	/*gson*/
+	implementation 'com.google.code.gson:gson:2.10.1'
+
+
+
 	/* swagger2 */
 	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
