[CI/CD]feat :frontend server nginx setting

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -16,7 +16,7 @@ http {
   keepalive_timeout  65;
   server {
     listen       3000;
-    server_name  i8A803.p.ssafy.io;
+    server_name  j8a305.p.ssafy.io;
     location / {
       root   /app/build;
       index  index.html;
