--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -18,7 +18,7 @@ http {
     listen       3000;
     server_name  j8a305.p.ssafy.io;
     location / {
-      root   /app/build;
+      root   /app;
       index  index.html;
       try_files $uri $uri/ /index.html;
     }
