--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "three": "^0.150.1",
+    "three-gif-loader": "^1.1.0",
     "tsc-watch": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -64,6 +65,7 @@
     "@iconify/react": "^4.1.0",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
-    "@types/three": "^0.149.0"
+    "@types/three": "^0.149.0",
+    "@types/three-gif-loader": "^1.1.1"
   }
 }
