--- a/mpoffice/build.gradle
+++ b/mpoffice/build.gradle
@@ -47,6 +47,11 @@ dependencies {
 
 	implementation 'com.google.auth:google-auth-library-oauth2-http:0.22.0'
 	implementation 'com.google.cloud:google-cloud-storage:2.0.0'
+
+	implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+	implementation 'com.google.code.gson:gson:2.10.1'
+	implementation 'org.json:json:20201115'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 
 tasks.named('test') {
