--- a/auction/build.gradle
+++ b/auction/build.gradle
@@ -36,8 +36,9 @@ dependencies {
 
 	/*okhttp3*/
 	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
-	/*gson*/
-	implementation 'com.google.code.gson:gson:2.10.1'
+	/*json*/
+	implementation 'org.json:json:20230227'
+
 
 
 
