--- a/mpoffice/src/main/resources/application.yml
+++ b/mpoffice/src/main/resources/application.yml
@@ -24,6 +24,11 @@ spring:
         multipart:
             max-file-size: 10MB
             max-request-size: 10MB
+    redis:
+        port:
+            6379
+        host:
+            https://j8a305.p.ssafy.io
 
 server:
     port: 8071
