--- a/mpoffice/build.gradle
+++ b/mpoffice/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 	implementation 'org.json:json:20201115'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
+	implementation group: 'com.microsoft.azure.cognitiveservices', name: 'azure-computervision', version: '0.0.1-beta'
 }
 
 tasks.named('test') {
