--- a/Frontend/.env
+++ b/Frontend/.env
@@ -2,3 +2,4 @@ REACT_APP_CM_ENDPOINT = "https://dahejocontentmoderator.cognitiveservices.azure.
 REACT_APP_CM_KEY = "2ee82f90eb6f43888bb0c566bccc26c9"
 
 REACT_APP_HOST = "https://j8a305.p.ssafy.io"
+REACT_APP_INFURA_ENDPOINT = "https://mainnet.infura.io/v3/e17e7785a61b428bb90baef4793cac16"
