[BE]fix: 컨테이너 시간 설정, 사용하지 않는 docker-compose.yml 주석 처리

--- a/auction/Dockerfile
+++ b/auction/Dockerfile
@@ -13,7 +13,7 @@ COPY auction/build.gradle .
 COPY auction/settings.gradle .
 COPY auction/src src
 RUN chmod +x ./gradlew
-RUN ./gradlew clean bootJar
+RUN ./gradlew clean bootJar add tzdata
 
 FROM adoptopenjdk:11-hotspot
 COPY --from=builder build/libs/*.jar app.jar
