--- a/auction/src/main/resources/application.yml
+++ b/auction/src/main/resources/application.yml
@@ -24,9 +24,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-#  jackson:
-#    deserialization:
-#      adjust-dates-to-context-time-zone: false
+  jackson:
+    deserialization:
+      adjust-dates-to-context-time-zone: false
+    time-zone: Asia/Seoul
 app:
   business:
     url: https://j8a305.p.ssafy.io/api/mpoffice
